public/assets/jdih/css/style.css
h2.section-title {
    font-size: 1.8rem;
}

@media (min-width: 1200px) {
    .display-7 {
        font-size: 1.8rem;
    }
}

.start-5 {
    left: 5px !important;
}

.overlay::before {
    position: absolute;
    content: '';
    left: 0px;
    top: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba(37,43,54,0.7);
    z-index: 2;
}

.lift {
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    transform: translateY(0);
    transition: all .3s ease;
}

.lift:hover {
    transform: translateY(-.4rem);
    box-shadow: 0 .25rem 1.25rem rgba(52,63,82,.1);
}

.text-handwriting {
    font-family: 'Kaushan Script', cursive;
}

